--- a/src/components/Accomplishment/accomplishment.module.css
+++ b/src/components/Accomplishment/accomplishment.module.css
@@ -1,7 +1,6 @@
 .accomplishment {
     min-width: 100vw;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
@@ -9,14 +8,12 @@
     display: flex;
     max-width: 1000px;
     background-color: var(--clr-yellow-light);
-    margin: auto 0;
     margin: 0px var(--margin) 32px var(--margin);
 }
 
 .img {
     position: relative;
     flex: 1;
-    aspect-ratio: 2/3;
 }
 
 
@@ -27,12 +24,12 @@
 
 
 .text {
-    width: 50%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: flex-start;
-    padding: 2rem;
+    padding: var(--margin);
     box-sizing: border-box;
     justify-content: center;
 }
@@ -45,10 +42,14 @@
 
     .img {
         width: 100%;
-        aspect-ratio: 3/2;
+    }
+
+    .img img {
+        object-position: top;
     }
 
     .text {
         width: 100%;
+        justify-content: flex-start;
     }
 }
